--- a/Example/DoubleLayerView/Base.lproj/Main.storyboard
+++ b/Example/DoubleLayerView/Base.lproj/Main.storyboard
@@ -29,13 +29,13 @@
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                        <real key="value" value="20"/>
+                                        <real key="value" value="8"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
-                                        <real key="value" value="5"/>
+                                        <real key="value" value="4"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
-                                        <color key="value" systemColor="systemBrownColor"/>
+                                        <color key="value" systemColor="systemGreenColor"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="number" keyPath="externalLayerBorderWidth">
                                         <real key="value" value="5"/>
@@ -46,15 +46,34 @@
                                     <userDefinedRuntimeAttribute type="number" keyPath="interval">
                                         <real key="value" value="10"/>
                                     </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="innerBackgroundColor">
+                                        <color key="value" systemColor="systemIndigoColor"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="borderSpacing">
+                                        <real key="value" value="8"/>
+                                    </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ArQ-wT-fCV">
+                                <rect key="frame" x="157" y="480" width="76" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="animate"/>
+                                <connections>
+                                    <action selector="didTapAnimateButton:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="kSU-2u-OkU"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="ArQ-wT-fCV" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="0mN-Hf-Kth"/>
                             <constraint firstItem="oWZ-8q-jjI" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="DU4-xH-pik"/>
                             <constraint firstItem="oWZ-8q-jjI" firstAttribute="centerY" secondItem="kh9-bI-dsS" secondAttribute="centerY" id="Odx-ja-q6S"/>
+                            <constraint firstItem="ArQ-wT-fCV" firstAttribute="top" secondItem="oWZ-8q-jjI" secondAttribute="bottom" constant="28" id="TMi-JM-8pq"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="doubleLayerView" destination="oWZ-8q-jjI" id="vFJ-fs-8mh"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
@@ -62,11 +81,14 @@
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemBrownColor">
-            <color red="0.63529411764705879" green="0.51764705882352946" blue="0.36862745098039218" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
         <systemColor name="systemGray5Color">
             <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemIndigoColor">
+            <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemPurpleColor">
             <color red="0.68627450980392157" green="0.32156862745098042" blue="0.87058823529411766" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
